# Terminal-Graphics

./: .gitignore  C.sublime-workspace  CMakeLists.txt  Makefile  project.yml
include/: double_buffer.h  errors.h  terminal_utils.h
lib/src/: cmocka.c
src/: double_buffer.c  errors.c  main.c  terminal_utils.c
test/: test_double_buffer.c
tests/tests/: double_buffer_test.c  test_main.c
